@@ -1,1 +1,1 @@
-<H1><CENTER>Sheet1</CENTER></H1><br><FONT FACE="Arial"><TABLE BORDER="1" CELLSPACING="2"><TR><TD>Test de xlhtml</table></FONT><HR><H1><CENTER>Sheet2</CENTER></H1><br><FONT FACE="Arial"><TABLE BORDER="1" CELLSPACING="2"><TR><TD>&nbsp;</table></FONT><HR><H1><CENTER>Sheet3</CENTER></H1><br><FONT FACE="Arial"><TABLE BORDER="1" CELLSPACING="2"><TR><TD>&nbsp;</table></FONT><HR><FONT SIZE=-1><I>Spreadsheet's Author:&nbsp;Calc</I></FONT><br><FONT SIZE=-1><I>Last Updated with Excel 97</I></FONT><br>&nbsp;<br><hr><FONT SIZE=-1>Created with <a href="http://chicago.sf.net/xlhtml">xlhtml 0.4.9.2</a></FONT><br>
+<H1><CENTER>Sheet1</CENTER></H1><br><FONT FACE="Arial"><TABLE BORDER="1" CELLSPACING="2"><TR><TD>Test de xlhtml</table></FONT><HR><H1><CENTER>Sheet2</CENTER></H1><br><FONT FACE="Arial"><TABLE BORDER="1" CELLSPACING="2"><TR><TD>&nbsp;</table></FONT><HR><H1><CENTER>Sheet3</CENTER></H1><br><FONT FACE="Arial"><TABLE BORDER="1" CELLSPACING="2"><TR><TD>&nbsp;</table></FONT><HR><FONT SIZE=-1><I>Spreadsheet's Author:&nbsp;Calc</I></FONT><br><FONT SIZE=-1><I>Last Updated with Excel 97</I></FONT><br>&nbsp;<br><hr><FONT SIZE=-1>Created with <a href="http://chicago.sf.net/xlhtml">xlhtml</a></FONT><br>
