@@ -3,5 +3,5 @@
 Test de ppthtml<BR>
 <BR><HR><BR>
 <HR>&nbsp;<br>
-<hr><FONT SIZE=-1>Created with <a href="http://chicago.sf.net/xlhtml">pptHtml 0.4.9.2</a></FONT><br>
+<hr><FONT SIZE=-1>Created with <a href="http://chicago.sf.net/xlhtml">pptHtml</a></FONT><br>
 </BODY></HTML>
